--- a/01-starting-project/src/app/app.component.html
+++ b/01-starting-project/src/app/app.component.html
@@ -1,1 +1,16 @@
-<h1 class="center">Practice Time!</h1>
+
+<app-header>
+
+</app-header>
+<app-user-input (onAddingnewCalculation)="passInvestementInformation($event)">
+
+</app-user-input>
+@for(invest of Investments; track invest){
+<app-investment-results 
+                        [currentDuration]="invest.duration"
+                        [currentInvestedCapital]="invest.initialInvest"
+                        [currentInterest]="''"
+                        [currentTotalInterrest]="''"
+                        [currentInvestmentValue]="invest.exspectedReturn">
+</app-investment-results>
+}
