--- a/01-starting-project/src/styles.css
+++ b/01-starting-project/src/styles.css
@@ -9,7 +9,7 @@ body {
   font-family: 'Quicksand', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: radial-gradient(#303b37, #1a1f1d);
+  background: linear-gradient(180deg,#303b37, #00ac67);
   color: #e1eeeb;
   min-height: 100vh;
 }
